@@ -16,7 +16,7 @@
 # for historical purposes.  This should be the first option specified 
 # in the config file!!!
 
-log_file=/usr/local/nagios/var/nagios.log
+log_file=var/nagios.log
 
 
 
@@ -88,7 +88,7 @@ resource_file=etc/resource.cfg
 # The contents of the status file are deleted every time Nagios
 #  restarts.
 
-status_file=/usr/local/nagios/var/status.dat
+status_file=var/status.dat
 
 
 
@@ -155,7 +155,7 @@ command_check_interval=-1
 # directory level instead of on the file, as the file is deleted every
 # time its contents are processed.
 
-command_file=/usr/local/nagios/var/rw/nagios.cmd
+command_file=var/rw/nagios.cmd
 
 
 
@@ -173,7 +173,7 @@ external_command_buffer_slots=4096
 # This is the lockfile that Nagios will use to store its PID number
 # in when it is running in daemon mode.
 
-lock_file=/usr/local/nagios/var/nagios.lock
+lock_file=var/nagios.lock
 
 
 
@@ -183,7 +183,7 @@ lock_file=/usr/local/nagios/var/nagios.lock
 # is created, used, and deleted throughout the time that Nagios is
 # running.
 
-temp_file=/usr/local/nagios/var/nagios.tmp
+temp_file=var/nagios.tmp
 
 
 
@@ -249,7 +249,7 @@ log_rotation_method=d
 # This is the directory where archived (rotated) log files should be 
 # placed (assuming you've chosen to do log rotation).
 
-log_archive_path=/usr/local/nagios/var/archives
+log_archive_path=var/archives
 
 
 
@@ -622,7 +622,7 @@ retain_state_information=1
 # This file is used only if the preserve_state_information
 # variable is set to 1.
 
-state_retention_file=/usr/local/nagios/var/retention.dat
+state_retention_file=var/retention.dat
 
 
 
@@ -1291,7 +1291,7 @@ debug_verbosity=1
 # DEBUG FILE
 # This option determines where Nagios should write debugging information.
 
-debug_file=/usr/local/nagios/var/nagios.debug
+debug_file=var/nagios.debug
 
 
 
