@@ -1,0 +1,202 @@
+########################################
+#          NAGIOS STATUS FILE
+#
+# THIS FILE IS AUTOMATICALLY GENERATED
+# BY NAGIOS.  DO NOT MODIFY THIS FILE!
+########################################
+
+info {
+	created=1242341791
+	version=3.1.0
+	last_update_check=1242341791
+	update_available=1
+	last_version=3.1.0
+	new_version=3.0.6
+	}
+
+programstatus {
+	modified_host_attributes=0
+	modified_service_attributes=0
+	nagios_pid=48451
+	daemon_mode=0
+	program_start=1242341791
+	last_command_check=0
+	last_log_rotation=0
+	enable_notifications=1
+	active_service_checks_enabled=1
+	passive_service_checks_enabled=1
+	active_host_checks_enabled=1
+	passive_host_checks_enabled=1
+	enable_event_handlers=1
+	obsess_over_services=0
+	obsess_over_hosts=0
+	check_service_freshness=1
+	check_host_freshness=0
+	enable_flap_detection=1
+	enable_failure_prediction=1
+	process_performance_data=0
+	global_host_event_handler=
+	global_service_event_handler=
+	next_comment_id=1
+	next_downtime_id=1
+	next_event_id=1
+	next_problem_id=0
+	next_notification_id=1
+	total_external_command_buffer_slots=4096
+	used_external_command_buffer_slots=0
+	high_external_command_buffer_slots=0
+	active_scheduled_host_check_stats=0,0,0
+	active_ondemand_host_check_stats=0,0,0
+	passive_host_check_stats=0,0,0
+	active_scheduled_service_check_stats=0,0,0
+	active_ondemand_service_check_stats=0,0,0
+	passive_service_check_stats=0,0,0
+	cached_host_check_stats=0,0,0
+	cached_service_check_stats=0,0,0
+	external_command_stats=0,0,0
+	parallel_host_check_stats=0,0,0
+	serial_host_check_stats=0,0,0
+	}
+
+hoststatus {
+	host_name=host1
+	modified_attributes=0
+	check_command=
+	check_period=none
+	notification_period=none
+	check_interval=5.000000
+	retry_interval=1.000000
+	event_handler=
+	has_been_checked=0
+	should_be_scheduled=0
+	check_execution_time=0.000
+	check_latency=0.000
+	check_type=0
+	current_state=0
+	last_hard_state=0
+	last_event_id=0
+	current_event_id=0
+	current_problem_id=0
+	last_problem_id=0
+	plugin_output=
+	long_plugin_output=
+	performance_data=
+	last_check=0
+	next_check=0
+	check_options=0
+	current_attempt=1
+	max_attempts=2
+	current_event_id=0
+	last_event_id=0
+	state_type=1
+	last_state_change=0
+	last_hard_state_change=0
+	last_time_up=0
+	last_time_down=0
+	last_time_unreachable=0
+	last_notification=0
+	next_notification=0
+	no_more_notifications=0
+	current_notification_number=0
+	current_notification_id=0
+	notifications_enabled=1
+	problem_has_been_acknowledged=0
+	acknowledgement_type=0
+	active_checks_enabled=1
+	passive_checks_enabled=1
+	event_handler_enabled=1
+	flap_detection_enabled=1
+	failure_prediction_enabled=1
+	process_performance_data=1
+	obsess_over_host=1
+	last_update=1242341791
+	is_flapping=0
+	percent_state_change=0.00
+	scheduled_downtime_depth=0
+	}
+
+servicestatus {
+	host_name=host1
+	service_description=Dummy service
+	modified_attributes=0
+	check_command=check_me
+	check_period=none
+	notification_period=none
+	check_interval=32.000000
+	retry_interval=1.000000
+	event_handler=
+	has_been_checked=0
+	should_be_scheduled=0
+	check_execution_time=0.000
+	check_latency=0.000
+	check_type=0
+	current_state=0
+	last_hard_state=0
+	last_event_id=0
+	current_event_id=0
+	current_problem_id=0
+	last_problem_id=0
+	current_attempt=1
+	max_attempts=3
+	current_event_id=0
+	last_event_id=0
+	state_type=1
+	last_state_change=0
+	last_hard_state_change=0
+	last_time_ok=0
+	last_time_warning=0
+	last_time_unknown=0
+	last_time_critical=0
+	plugin_output=
+	long_plugin_output=
+	performance_data=
+	last_check=0
+	next_check=0
+	check_options=0
+	current_notification_number=0
+	current_notification_id=0
+	last_notification=0
+	next_notification=0
+	no_more_notifications=0
+	notifications_enabled=1
+	active_checks_enabled=1
+	passive_checks_enabled=1
+	event_handler_enabled=1
+	problem_has_been_acknowledged=0
+	acknowledgement_type=0
+	flap_detection_enabled=1
+	failure_prediction_enabled=1
+	process_performance_data=1
+	obsess_over_service=1
+	last_update=1242341791
+	is_flapping=0
+	percent_state_change=0.00
+	scheduled_downtime_depth=0
+	}
+
+contactstatus {
+	contact_name=nagiosadmin
+	modified_attributes=0
+	modified_host_attributes=0
+	modified_service_attributes=0
+	host_notification_period=none
+	service_notification_period=none
+	last_host_notification=0
+	last_service_notification=0
+	host_notifications_enabled=0
+	service_notifications_enabled=0
+	}
+
+contactstatus {
+	contact_name=second
+	modified_attributes=0
+	modified_host_attributes=0
+	modified_service_attributes=0
+	host_notification_period=none
+	service_notification_period=none
+	last_host_notification=0
+	last_service_notification=0
+	host_notifications_enabled=0
+	service_notifications_enabled=0
+	}
+
